[gd_scene load_steps=27 format=2]

[ext_resource path="res://MAIN/sprites/guns/gun333.png" type="Texture" id=1]
[ext_resource path="res://MAIN/sprites/guns/guncool2.png" type="Texture" id=2]
[ext_resource path="res://MAIN/sprites/guns/Ammo.png" type="Texture" id=3]
[ext_resource path="res://MAIN/CashPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://MAIN/sprites/other/barHorizontal_green_mid 200.png" type="Texture" id=5]
[ext_resource path="res://MAIN/Shop.gd" type="Script" id=6]
[ext_resource path="res://MAIN/Bubble Bobble.otf" type="DynamicFontData" id=7]
[ext_resource path="res://MAIN/sprites/other/icons8-reply-arrow-96.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.164706, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0, 0.14902, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0235294, 0, 0.627451, 1 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.792157, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.14902, 0.203922, 0.152941, 1 )

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0627451, 0.0509804, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0, 0, 0.678431 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.0666667, 0.0666667, 0.372549, 1 )

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.0313726, 0, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.258824, 0, 0, 1 )

[sub_resource type="DynamicFont" id=18]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=19]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0.00784314, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0941176, 0, 0, 1 )

[sub_resource type="DynamicFont" id=21]
size = 100
font_data = ExtResource( 7 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.950012
margin_bottom = 0.950012
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashPanel" parent="." instance=ExtResource( 4 )]

[node name="QuitShop" type="Button" parent="."]
margin_left = 6.0
margin_right = 172.0
margin_bottom = 45.0
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.65098, 1, 0.67451, 1 )
text = "GO BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icons8-reply-arrow-96" type="Sprite" parent="QuitShop"]
modulate = Color( 1, 0, 0.0705882, 1 )
position = Vector2( 19.0137, 17.3487 )
scale = Vector2( 0.475963, 0.454574 )
texture = ExtResource( 9 )

[node name="OpenGunPanel" type="Button" parent="."]
margin_left = 1.40659
margin_top = 48.0267
margin_right = 621.407
margin_bottom = 110.027
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.321569, 0.760784, 0.952941, 1 )
text = "GUNS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenDronesPanel" type="Button" parent="."]
margin_left = 640.0
margin_top = 47.0
margin_right = 1280.0
margin_bottom = 109.0
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.321569, 0.760784, 0.952941, 1 )
text = "DRONES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunsPanel" type="Panel" parent="."]
margin_top = 110.0
margin_right = 1280.0
margin_bottom = 716.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gun1" type="Panel" parent="GunsPanel"]
margin_left = 46.877
margin_top = 62.4019
margin_right = 431.877
margin_bottom = 372.402
rect_scale = Vector2( 0.7, 0.6 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GunsPanel/Gun1"]
position = Vector2( 192.249, 93.2938 )
scale = Vector2( 0.247233, 0.358822 )
texture = ExtResource( 1 )

[node name="purchaseGun1" type="Label" parent="GunsPanel/Gun1"]
margin_top = 179.0
margin_right = 382.0
margin_bottom = 241.0
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.415686, 0.956863, 1, 0.752941 )
text = "EQUIPPED"
align = 1
valign = 1

[node name="upgradeGun1" type="Button" parent="GunsPanel/Gun1"]
margin_left = 184.0
margin_top = 250.0
margin_right = 365.0
margin_bottom = 307.0
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 18 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.415686, 0.956863, 1, 0.752941 )
text = "UPGRADE 700/="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damageGun1_bar" type="TextureProgress" parent="GunsPanel/Gun1"]
margin_left = 2.49739
margin_top = 260.394
margin_right = 202.497
margin_bottom = 286.394
rect_scale = Vector2( 0.5, 1 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.607843, 0.431373, 0.0823529, 1 )

[node name="damageGun1_label" type="Label" parent="GunsPanel/Gun1"]
margin_left = 109.0
margin_top = 256.0
margin_right = 169.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.521569, 0.764706, 1, 1 )
text = "5000"
align = 1
valign = 1

[node name="Gun2" type="Panel" parent="GunsPanel"]
margin_left = 352.049
margin_top = 63.5636
margin_right = 737.049
margin_bottom = 373.564
rect_scale = Vector2( 0.7, 0.6 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GunsPanel/Gun2"]
position = Vector2( 197.67, 87.9519 )
scale = Vector2( 0.621894, 0.535353 )
texture = ExtResource( 2 )

[node name="purchaseGun2" type="Button" parent="GunsPanel/Gun2"]
margin_top = 176.0
margin_right = 385.0
margin_bottom = 243.0
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.415686, 0.956863, 1, 0.752941 )
text = "BUY 12,500/="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgradeGun2" type="Button" parent="GunsPanel/Gun2"]
margin_left = 223.0
margin_top = 251.0
margin_right = 377.0
margin_bottom = 308.0
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 18 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.415686, 0.956863, 1, 0.752941 )
text = "UPGRADE 700/="

[node name="damageGun2_bar" type="TextureProgress" parent="GunsPanel/Gun2"]
margin_left = 15.9675
margin_top = 261.574
margin_right = 215.967
margin_bottom = 287.574
rect_scale = Vector2( 0.5, 1 )
value = 20.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.607843, 0.431373, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damageGun2_label" type="Label" parent="GunsPanel/Gun2"]
margin_left = 137.67
margin_top = 256.0
margin_right = 197.67
margin_bottom = 289.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.521569, 0.764706, 1, 1 )
text = "2000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RocketGun" type="Panel" parent="GunsPanel"]
margin_left = 656.141
margin_top = 63.5636
margin_right = 1041.14
margin_bottom = 373.564
rect_scale = Vector2( 0.7, 0.6 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GunsPanel/RocketGun"]
position = Vector2( 191.364, 94.506 )
rotation = 1.5708
scale = Vector2( 1.38012, 1.56728 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1207.37, 970.487, 115, 224 )

[node name="purchaseRocket" type="Button" parent="GunsPanel/RocketGun"]
margin_top = 176.0
margin_right = 385.0
margin_bottom = 242.0
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.415686, 0.956863, 1, 0.752941 )
text = "BUY 20,000/="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgradeRocket" type="Button" parent="GunsPanel/RocketGun"]
margin_left = 214.0
margin_top = 251.0
margin_right = 375.0
margin_bottom = 308.0
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 18 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.415686, 0.956863, 1, 0.752941 )
text = "UPGRADE 700/="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damageRocket_bar" type="TextureProgress" parent="GunsPanel/RocketGun"]
margin_left = 26.9514
margin_top = 261.574
margin_right = 226.951
margin_bottom = 287.574
rect_scale = Vector2( 0.5, 1 )
value = 80.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.607843, 0.431373, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damageRocket_label" type="Label" parent="GunsPanel/RocketGun"]
margin_left = 146.668
margin_top = 256.0
margin_right = 206.668
margin_bottom = 289.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.521569, 0.764706, 1, 1 )
text = "8000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DronesPanel" type="Panel" parent="."]
margin_left = 6.0
margin_top = 111.0
margin_right = 1280.0
margin_bottom = 717.0
custom_styles/panel = SubResource( 20 )

[node name="comingSoonLbl" type="Label" parent="DronesPanel"]
margin_left = 65.2484
margin_top = 233.239
margin_right = 1242.25
margin_bottom = 344.239
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0.835294, 1, 1 )
text = "COMING  SOON  MOTHER  F****ERS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="QuitShop" to="." method="_on_QuitShop_pressed"]
[connection signal="pressed" from="OpenGunPanel" to="." method="_on_OpenGunPanel_pressed"]
[connection signal="pressed" from="OpenDronesPanel" to="." method="_on_OpenDronesPanel_pressed"]
[connection signal="pressed" from="GunsPanel/Gun2/purchaseGun2" to="." method="_on_purchaseGun2_pressed"]
[connection signal="pressed" from="GunsPanel/RocketGun/purchaseRocket" to="." method="_on_purchaseRocket_pressed"]
